--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChawkBazar E-Commerce Template",
-  "short_name": "ChawkBazar",
+  "name": "Nätbutiken - Ålands e-handelsplats",
+  "short_name": "Nätbutiken",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
