--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
 	"env": {
-		"NEXT_PUBLIC_REST_API_ENDPOINT": "https://backendegnasidor.ue.r.appspot.com/"
+		"NEXT_PUBLIC_REST_API_ENDPOINT": "https://natbutiken.lm.r.appspot.com"
 	},
 	"build": {
 		"env": {
-			"NEXT_PUBLIC_REST_API_ENDPOINT": "https://backendegnasidor.ue.r.appspot.com/"
+			"NEXT_PUBLIC_REST_API_ENDPOINT": "https://natbutiken.lm.r.appspot.com"
 		}
 	}
 }
