--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-query": "3.39.3",
     "react-rating-stars-component": "2.2.3",
     "react-scroll": "1.9.0",
+    "react-select": "^5.8.2",
     "react-share": "5.1.0",
     "react-sticky-box": "2.0.5",
     "react-toastify": "10.0.5",
